[package]
name = "QidianMini"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1.47.1", features = ["default", "rt-multi-thread", "fs"] }
# web框架
axum = { version = "0.8.5", features = ["default"] }
axum-macros = "0.5.0"
axum-extra = "0.10.2"
# 中间件
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6",features = ["cors"] }
hyper = { version = "1.7.0", features = ["default"]}
http-body-util = "0.1.3"
# 反序列化
serde = "1.0.228"
serde_json = "1.0.145"
# 数据库
sqlx = "0.8.6"
# 鉴权
oauth2 = "5.0.0"
# 网络请求
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
# 邮件发送
lettre = { version = "0.11.18", features = ["smtp-transport", "builder"] }
# 时间解析
chrono = "0.4.42"
# 全局配置
once_cell = "1.21.3"
# 配置文件
dotenv = "0.15.0"
config = { version = "0.15.17", features = ["json", "toml"]}
secrecy = { version = "0.10.3", features = ["serde"] }
# uuid
uuid = { version = "1.18.1", features = ["v4"] }
# 随机数
rand = "0.9.2"
# base64编码
base64 = "0.22.1"
# 图片处理库
image = "0.25.1"
# 临时文件库
tempfile = "3.23.0"
# git操作封装库
octocrab = "0.47.0"
# url编码转化
urlencoding = "2.1.3"
# md5
md-5 = "0.10.6"
anyhow = "1.0.100"