[package]
name = "QidianMini"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1.47.1", features = ["default", "rt-multi-thread", "fs"] }

# Web 框架
axum = { version = "0.8.5", features = ["default"] }
axum-macros = "0.5.0"
axum-extra = "0.10.2"

# 中间件
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
hyper = { version = "1.7.0", features = ["http1", "http2", "server", "client"] }
http-body-util = "0.1.3"

# 反序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# 数据库
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "sqlite"] }

# 鉴权
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest", "rustls-tls"] }

# 网络请求（用 Rustls 替代 OpenSSL）
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }

# 邮件发送（使用 Rustls）
lettre = { version = "0.11.18", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }

# 时间解析
chrono = { version = "0.4.42", features = ["serde", "clock"] }

# 全局配置
once_cell = "1.21.3"

# 配置文件
dotenv = "0.15.0"
config = { version = "0.15.17", features = ["json", "toml"] }
secrecy = { version = "0.10.3", features = ["serde"] }

# UUID
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# 随机数
rand = "0.9.2"

# base64 编码
base64 = "0.22.1"

# 图片处理库
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "webp"] }

# 临时文件
tempfile = "3.23.0"

# Git 操作封装
octocrab = { version = "0.47.0"}

# URL 编码
urlencoding = "2.1.3"

# MD5
md-5 = "0.10.6"

# 错误处理
anyhow = "1.0.100"